# EmberBench

./: .env.example  .gitignore  README.md  pyproject.toml  run_claude_baseline.py  run_eval_direct.py  run_gemini_baseline.py  run_integrated_eval.py  run_kimi_baseline.py  run_sonar_baseline.py
data/: signatures.json
ember_security/: __init__.py
ember_security/dissonance_guard/: __init__.py  detector.py  frame_annotator.py  models.py  router.py  scorer.py
emberbench/: __init__.py  __main__.py  bootstrap.py  cli.py  report.py  runner.py
emberbench/datasets/: __init__.py  base.py  drift.py  financial.py  legal.py  medical.py
results/: claude_haiku_4_5_20251001_baseline_results.json  claude_haiku_4_5_20251001_integrated_v2_responses.json  claude_sonnet_4_6_baseline_results.json  claude_sonnet_4_6_integrated_v2_responses.json  emberbench_comparison.md  emberbench_report.md  gemini_3_1_pro_preview_baseline_results.json  gemini_3_1_pro_preview_integrated_v2_responses.json  kimi_k2_5_integrated_v2_responses.json  kimi_k2_6_integrated_v2_responses.json
