[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emberbench"
version = "0.1.0"
description = "EmberBench — Adversarial safety benchmark harness for LLM + EmberArmor integration testing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "anthropic>=0.25.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "bandit[toml]>=1.7.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["emberbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.bandit]
targets = ["emberbench", "run_integrated_eval.py", "run_claude_baseline.py",
           "run_gemini_baseline.py", "run_kimi_baseline.py", "run_sonar_baseline.py"]
exclude_dirs = ["tests", ".venv", "venv", "results", "data"]
skips = ["B101"]
recursive = true
